--- a/Proxies.Utils/Proxies.Utils.csproj
+++ b/Proxies.Utils/Proxies.Utils.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack, Version=1.11.4.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\Proxies\packages\HtmlAgilityPack.1.11.4\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\packages\HtmlAgilityPack.1.11.4\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,11 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Proxy\ProxyService.cs" />
+    <Compile Include="Proxy\Proxy_89ip.cs" />
+    <Compile Include="Proxy\Proxy_kuai.cs" />
     <Compile Include="HttpHelper.cs" />
     <Compile Include="IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyModel.cs" />
-    <Compile Include="Proxy_xici.cs" />
+    <Compile Include="Proxy\Proxy_xici.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
