--- a/Proxies.Utils/Proxies.Utils.csproj
+++ b/Proxies.Utils/Proxies.Utils.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Proxy\Proxy_89ip.cs" />
     <Compile Include="Proxy\Proxy_kuai.cs" />
     <Compile Include="HttpHelper.cs" />
-    <Compile Include="IProxy.cs" />
+    <Compile Include="Proxy\IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyModel.cs" />
     <Compile Include="Proxy\Proxy_xici.cs" />
